--- a/.prettierrc
+++ b/.prettierrc
@@ -7,6 +7,5 @@
 	"jsxSingleQuote": true,
 	"bracketSpacing": true,
 	"arrowParens": "avoid",
-	"endOfLine": "crlf",
-	"printWidth": 120
+	"endOfLine": "crlf"
 }
